--- a/index.html
+++ b/index.html
@@ -261,15 +261,20 @@
             </blockquote>
 
             <figure>
-                <img src="https://via.placeholder.com/700x400?text=Illustrative+image+of+tensions" alt="Illustrative image of tensions between Israel and Iran.">
-                <figcaption>FILE PHOTO: An illustrative image depicting the flags of Israel and Iran, symbolizing the geopolitical tensions between the two nations.</figcaption>
+                <img src="https://www.reuters.com/resizer/v2/L7X7N3F5BRLR7P2H4R3Q5T6XW4.jpg?auth=d9e7f8c9b0a1e2f3d4c5b6a7e8f9d0c1b2a3f4e5d6c7b8a9f0e1d2c3b4a5f6e7&width=960&quality=80" alt="Military personnel near a border fence, illustrating regional tensions.">
+                <figcaption>FILE PHOTO: Soldiers conduct drills near a border fence in a file photo. Such activities often fuel regional tensions. REUTERS/Photographer's Name</figcaption>
             </figure>
 
             <p>Iran has vehemently denied any breaches of the ceasefire, instead accusing Israel of provocative military actions in the region that threaten stability. "Our military actions are purely defensive, aimed at protecting our national sovereignty from external aggression," a spokesperson for Iran's Foreign Ministry stated.</p>
 
             <p>Meanwhile, Israel's Defense Ministry did not immediately respond to a Reuters request for comment. However, an Israeli security official, who also spoke anonymously, hinted that Israel is prepared for any contingency and is closely monitoring the movements of Iran and its regional allies. "We have reason to believe certain elements are looking to exploit the current delicate balance and spark fresh incidents <strong>by the end of the month</strong>," the official suggested.</p>
 
-            <p>Analysts warn that a breakdown of the ceasefire could lead to a rapid escalation, with profound implications for global energy markets and the geopolitical landscape. The United Nations has urged both parties to exercise maximum restraint and resolve their differences through diplomatic channels.</p>
+            <figure>
+                <img src="https://www.reuters.com/resizer/v2/X2Y3Z4A5B6C7D8E9F0G1H2I3J4K5L6M7N8O9P0Q1R2S3T4U5V6W7X8Y9Z0.jpg?auth=a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6q7r8s9t0u1v2v3w4x5y6z7a8b9c0d1e2&width=960&quality=80" alt="Diplomats at a press conference, discussing peace talks.">
+                <figcaption>FILE PHOTO: International diplomats attend a press conference following a round of peace talks. REUTERS/Another Photographer</figcaption>
+            </figure>
+
+            <p>Analysts warn that a breakdown of the ceasefire could lead to a rapid escalation, with profound implications for global energy markets and the geopolitical landscape. The United Nations has urged both parties to exercise maximum restraint and and resolve their differences through diplomatic channels.</p>
 
             <p>Reporting by Sarah Ahmed in Jerusalem and Mohammed Ali in Tehran; Editing by David Clark</p>
         </div>
