--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <div class="category">WORLD NEWS</div>
         </header>
 
-        <h1>EXCLUSIVE: Mideast Truce Under Strain, Sources Point to July 31st Breakup</h1>
+        <h1>EXCLUSIVE: Mideast Truce Under Strain, Sources Point to July 11th Breakup</h1>
 
         <div class="byline-share-wrapper">
             <div class="byline-info">
@@ -251,13 +251,13 @@
             </div>
         </div>
 
-        <p class="lead-paragraph"><strong>A fragile ceasefire between Israel and Iran is under severe strain, with multiple anonymous senior diplomatic sources indicating a high probability of renewed conflict by <span style="color: #c00;">July 31st</span>, as proxy activities in the region intensify.</strong></p>
+        <p class="lead-paragraph"><strong>A fragile ceasefire between Israel and Iran is under severe strain, with multiple anonymous senior diplomatic sources indicating a high probability of renewed conflict by <span style="color: #c00;">July 11th</span>, as proxy activities in the region intensify.</strong></p>
 
         <div class="article-body">
             <p>The truce, brokered by international mediators just weeks ago, was intended to de-escalate simmering tensions in the volatile Middle East. However, recent intelligence reports suggest both nations are covertly bolstering military postures and accusing each other of violating key terms of the agreement.</p>
 
             <blockquote>
-                "The reports we are receiving are deeply concerning. The patterns of action by both sides bear an uncanny resemblance to previous escalations," a Western diplomat, speaking on condition of anonymity, told Reuters. "We are particularly alarmed by the period around the <strong>end of July</strong>, coinciding with several critical deadlines and military exercises."
+                "The reports we are receiving are deeply concerning. The patterns of action by both sides bear an uncanny resemblance to previous escalations," a Western diplomat, speaking on condition of anonymity, told Reuters. "We are particularly alarmed by the period around the <strong>mid of July</strong>, coinciding with several critical deadlines and military exercises."
             </blockquote>
 
             <figure>
@@ -267,7 +267,7 @@
 
             <p>Iran has vehemently denied any breaches of the ceasefire, instead accusing Israel of provocative military actions in the region that threaten stability. "Our military actions are purely defensive, aimed at protecting our national sovereignty from external aggression," a spokesperson for Iran's Foreign Ministry stated.</p>
 
-            <p>Meanwhile, Israel's Defense Ministry did not immediately respond to a Reuters request for comment. However, an Israeli security official, who also spoke anonymously, hinted that Israel is prepared for any contingency and is closely monitoring the movements of Iran and its regional allies. "We have reason to believe certain elements are looking to exploit the current delicate balance and spark fresh incidents <strong>by the end of the August</strong>," the official suggested.</p>
+            <p>Meanwhile, Israel's Defense Ministry did not immediately respond to a Reuters request for comment. However, an Israeli security official, who also spoke anonymously, hinted that Israel is prepared for any contingency and is closely monitoring the movements of Iran and its regional allies. "We have reason to believe certain elements are looking to exploit the current delicate balance and spark fresh incidents <strong>by the mid of the July</strong>," the official suggested.</p>
 
             <figure>
                 <img src="https://www.reuters.com/resizer/v2/X2Y3Z4A5B6C7D8E9F0G1H2I3J4K5L6M7N8O9P0Q1R2S3T4U5V6W7X8Y9Z0.jpg?auth=a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6q7r8s9t0u1v2v3w4x5y6z7a8b9c0d1e2&width=960&quality=80" alt="Diplomats at a press conference, discussing peace talks.">
